recent obs must have taxa for now; fix overview overflow

--- a/app/assets/stylesheets/projects/show2.scss
+++ b/app/assets/stylesheets/projects/show2.scss
@@ -225,6 +225,13 @@ button.btn-white {
   background: $page-background-grey;
 }
 
+.OverviewTab {
+  .ObservationsGrid {
+    height: 234px;
+    overflow: hidden
+  }
+}
+
 .Identifiers, .Observers {
   table {
     width: 100%;
